--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-><!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,9 +6,26 @@
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
+
 <body>
-    
     <h1>Calculator</h1>
+
+    <div class="container">
+         <form action="">
+            <p>CASIO </p>
+
+            <input type="text" id="screen">
+            <br>
+
+            <input class="button number" type="button" value="7">
+            <input class="button number" type="button" value="8">
+            <input class="button number" type="button" value="9">
+            <input class="button operator" type="button" value="/">
+
+         </form>
+
+    </div>
+
 
     <script src="calc.js"></script>
 </body>
