--- a/index.html
+++ b/index.html
@@ -22,6 +22,27 @@
             <input class="button number" type="button" value="9">
             <input class="button operator" type="button" value="/">
 
+            <br>
+
+            <input class="button number" type="button" value="4">
+            <input class="button number" type="button" value="5">
+            <input class="button number" type="button" value="6">
+            <input class="button operator" type="button" value="*">
+
+            <br>
+
+            <input class="button number" type="button" value="1">
+            <input class="button number" type="button" value="2">
+            <input class="button number" type="button" value="3">
+            <input class="button operator" type="button" value="+">
+
+            <br>
+
+            <input class="button number" type="button" value="C">
+            <input class="button number" type="button" value="0">
+            <input class="button number" type="button" value="=">
+            <input class="button operator" type="button" value="-">
+
          </form>
 
     </div>
