--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
             <br>
 
-            <input class="button number" type="button" value="C">
+            <input class="button clear" type="button" value="C">
             <input class="button number" type="button" value="0">
-            <input class="button number" type="button" value="=">
+            <input class="button result" type="button" value="=">
             <input class="button operator" type="button" value="-">
 
          </form>
