--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="text" id="screen">
             <br>
 
-            <input class="button number" type="button" value="7">
+            <input class="button number" type="button" value="7" onclick="btnClick(value)">
             <input class="button number" type="button" value="8">
             <input class="button number" type="button" value="9">
             <input class="button operator" type="button" value="/">
