--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
             <input class="button clear" type="button" value="C" onclick="clearScreen()">
             <input class="button number" type="button" value="0" onclick="btnClick(value)">
-            <input class="button result" type="button" value="=">
+            <input class="button result" type="button" value="=" onclick="findResult()">
             <input class="button operator" type="button" value="-" onclick="btnClick(value)">
 
          </form>
